--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
   <link rel="stylesheet" href="css/style.css">
  </head>
  <body>
-  <h1>site here</h1>
-  <p> some text</p>
-  <p> la la la </p>   
+   <p> Ygritte + Jon Snow = Cave Sex!!!</p>
  </body>
 </html>
