--- a/index.html
+++ b/index.html
@@ -2,12 +2,15 @@
 <html>
  <head>
   <meta charset="utf-8">
-  <title>Site</title>
-   <h1>Test</h1>
-
-  <link rel="stylesheet" href="css/style.css">
+ <link rel="stylesheet" href="css/style.css">
+  <title>LosftSchool</title>
+   <h1>Hello from your master branch after merge</h1>
  </head>
  <body>
-   <p> Ygritte + Jon Snow = Cave Sex!!!</p>
+   <p> Content</p>
+   <div> Ygritte + Jon Snow = Cave Sex!!!</div>
+   <div> Jaime + Sercei = Incest Sex!!!</div>
+   <div> Maregery + Tomen = Milf Sex!!!</div>
+   <p>End Content</p>
  </body>
 </html>
